# feed-sifter

./: LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
output/: credit.txt  example_bio.json
src/feed_sifter/content_workers/: atom.py
