[project]
name = "feed_sifter"
description = "A python library for filtering article feeds by words of interest"
authors = [{ name = "Patrick Shechet", email = "patrick.shechet@gmail.com" }]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/kajuberdut/feed-sifter"

[project.optional-dependencies]
dev = ["ruff"]
all = ["feedparser>=6.0,<7.0"]

[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feed_sifter"]

[tool.hatch.version]
path = "src/feed_sifter/__init__.py"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
